--- a/dashboard-react/package.json
+++ b/dashboard-react/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.0",
+    "clsx": "^2.1.0",
     "next": "^14.2.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "recharts": "^2.12.0",
-    "papaparse": "^5.4.1",
-    "@headlessui/react": "^1.7.19",
-    "@heroicons/react": "^2.1.0",
-    "clsx": "^2.1.0"
+    "vercel": "^50.25.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/papaparse": "^5.3.14",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
